--- a/scss/styless.css
+++ b/scss/styless.css
@@ -58,5 +58,12 @@
     width: 250px;
 }
 
+@media only screen and (max-width: 375px) {
+    .slider {
+        width: 100%;
+        height: 1000vh;
+    }
+}
+
 
 /*# sourceMappingURL=styless.css.map */
