--- a/headshot/headshot.css
+++ b/headshot/headshot.css
@@ -1,360 +1,123 @@
-/*# sourceMappingURL=headshot.css.map */
+.video-gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
+    grid-gap: 15px;
+    max-width: 1100px;
+    padding: 15px;
+    margin: 0 auto;
+    box-sizing: border-box;
+}
 
-body {
+.video-gallery .gallery-item {
+    position: relative;
+    width: 100%;
+    height: 300px;
     background: #000;
+    cursor: pointer;
     overflow: hidden;
 }
 
-#showcase {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-    width: 1000px;
-    height: 700px;
-}
-
-section {
-    display: inline-block;
+.video-gallery .gallery-item img {
     position: relative;
-    width: 25%;
-    height: 100%;
-    background-size: cover;
+    background-size: contain;
+    display: block;
+    width: 115%;
+    height: 300px;
+    -o-object-fit: cover;
+    object-fit: cover;
+    opacity: .5;
+    /*transition: opacity .35s, transform .35s;*/
+    transition: all 350ms ease-in-out;
+    transform: translate3d(-23px, 0, 0);
+    /*backface-visibility: hidden;*/
 }
 
-section:after {
-    content: '';
+.north-cascades-img {
+    -o-object-position: 50% 30%;
+    object-position: 50% 30%;
+}
+
+.video-gallery .gallery-item .gallery-item-caption {
+    padding: 32px;
+    font-size: 1em;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.video-gallery .gallery-item .gallery-item-caption,
+.video-gallery .gallery-item .gallery-item-caption>a {
     position: absolute;
     top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    -moz-transition: all 0.5s;
-    -o-transition: all 0.5s;
-    -webkit-transition: all 0.5s;
-    transition: all 0.5s;
 }
 
-section:nth-child(1) {
-    -moz-animation: section-1 8s both infinite;
-    -webkit-animation: section-1 8s both infinite;
-    animation: section-1 8s both infinite;
+.video-gallery .gallery-item h2 {
+    font-weight: 300;
+    overflow: hidden;
+    padding: 12px 0;
 }
 
-@-moz-keyframes section-1 {
-    0%,
-    20%,
-    100% {
-        background: url("https://unsplash.imgix.net/photo-1414924347000-9823c338079b?fit=crop&fm=jpg&h=700&q=75&w=1050") 0% 0%;
-        -webkit-clip-path: polygon(23% 18%, 95% 13%, 100% 91%, 55% 87%);
-    }
-    25%,
-    45% {
-        background: url("https://unsplash.imgix.net/30/skater.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") 0% 0%;
-        -webkit-clip-path: polygon(95% 10%, 100% 80%, 62% 77%, 45% 12%);
-    }
-    50%,
-    70% {
-        background: url("https://unsplash.imgix.net/photo-1415226581130-91cb7f52f078?fit=crop&fm=jpg&h=700&q=75&w=1050") 0% 0%;
-        -webkit-clip-path: polygon(100% 67%, 48% 63%, 28% 9%, 95% 3%);
-    }
-    75%,
-    95% {
-        background: url("https://ununsplash.imgix.net/40/lUUnN7VGSoWZ3noefeH7_Baker%20Beach-12.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") 0% 0%;
-        -webkit-clip-path: polygon(78% 72%, 58% 34%, 95% 27%, 100% 73%);
-    }
+.video-gallery .gallery-item h2,
+.video-gallery .gallery-item p {
+    position: relative;
+    margin: 0;
+    z-index: 1;
+    pointer-events: none;
 }
 
-@-webkit-keyframes section-1 {
-    0%,
-    20%,
-    100% {
-        background: url("https://unsplash.imgix.net/photo-1414924347000-9823c338079b?fit=crop&fm=jpg&h=700&q=75&w=1050") 0% 0%;
-        -webkit-clip-path: polygon(23% 18%, 95% 13%, 100% 91%, 55% 87%);
-    }
-    25%,
-    45% {
-        background: url("https://unsplash.imgix.net/30/skater.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") 0% 0%;
-        -webkit-clip-path: polygon(95% 10%, 100% 80%, 62% 77%, 45% 12%);
-    }
-    50%,
-    70% {
-        background: url("https://unsplash.imgix.net/photo-1415226581130-91cb7f52f078?fit=crop&fm=jpg&h=700&q=75&w=1050") 0% 0%;
-        -webkit-clip-path: polygon(100% 67%, 48% 63%, 28% 9%, 95% 3%);
-    }
-    75%,
-    95% {
-        background: url("https://ununsplash.imgix.net/40/lUUnN7VGSoWZ3noefeH7_Baker%20Beach-12.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") 0% 0%;
-        -webkit-clip-path: polygon(78% 72%, 58% 34%, 95% 27%, 100% 73%);
-    }
+.video-gallery .gallery-item p {
+    letter-spacing: 1px;
+    font-size: 12px;
+    padding: 12px 0;
+    opacity: 0;
+    transition: opacity 0.35s, transform 0.35s;
+    transform: translate3d(10%, 0, 0);
 }
 
-@keyframes section-1 {
-    0%,
-    20%,
-    100% {
-        background: url("https://unsplash.imgix.net/photo-1414924347000-9823c338079b?fit=crop&fm=jpg&h=700&q=75&w=1050") 0% 0%;
-        -webkit-clip-path: polygon(23% 18%, 95% 13%, 100% 91%, 55% 87%);
-    }
-    25%,
-    45% {
-        background: url("https://unsplash.imgix.net/30/skater.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") 0% 0%;
-        -webkit-clip-path: polygon(95% 10%, 100% 80%, 62% 77%, 45% 12%);
-    }
-    50%,
-    70% {
-        background: url("https://unsplash.imgix.net/photo-1415226581130-91cb7f52f078?fit=crop&fm=jpg&h=700&q=75&w=1050") 0% 0%;
-        -webkit-clip-path: polygon(100% 67%, 48% 63%, 28% 9%, 95% 3%);
-    }
-    75%,
-    95% {
-        background: url("https://ununsplash.imgix.net/40/lUUnN7VGSoWZ3noefeH7_Baker%20Beach-12.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") 0% 0%;
-        -webkit-clip-path: polygon(78% 72%, 58% 34%, 95% 27%, 100% 73%);
-    }
+.video-gallery .gallery-item:hover img {
+    opacity: 0.3;
+    transform: translate3d(0, 0, 0);
 }
 
-section:nth-child(2) {
-    -moz-animation: section-2 8s both infinite;
-    -webkit-animation: section-2 8s both infinite;
-    animation: section-2 8s both infinite;
+.video-gallery .gallery-item .gallery-item-caption {
+    text-align: left;
 }
 
-@-moz-keyframes section-2 {
-    0%,
-    20%,
-    100% {
-        background: url("https://unsplash.imgix.net/photo-1414924347000-9823c338079b?fit=crop&fm=jpg&h=700&q=75&w=1050") 33.33333% 0%;
-        -webkit-clip-path: polygon(0% 7%, 100% 9%, 95% 93%, 5% 95%);
-    }
-    25%,
-    45% {
-        background: url("https://unsplash.imgix.net/30/skater.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") 33.33333% 0%;
-        -webkit-clip-path: polygon(100% 3%, 95% 95%, 5% 90%, 0% 5%);
-    }
-    50%,
-    70% {
-        background: url("https://unsplash.imgix.net/photo-1415226581130-91cb7f52f078?fit=crop&fm=jpg&h=700&q=75&w=1050") 33.33333% 0%;
-        -webkit-clip-path: polygon(95% 83%, 5% 78%, 0% 6%, 100% 11%);
-    }
-    75%,
-    95% {
-        background: url("https://ununsplash.imgix.net/40/lUUnN7VGSoWZ3noefeH7_Baker%20Beach-12.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") 33.33333% 0%;
-        -webkit-clip-path: polygon(5% 79%, 0% 21%, 100% 16%, 95% 83%);
-    }
+.video-gallery .gallery-item h2::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 15%;
+    height: 1px;
+    background: #fff;
+    transition: transform 0.3s;
+    transform: translate3d(-100%, 0, 0);
 }
 
-@-webkit-keyframes section-2 {
-    0%,
-    20%,
-    100% {
-        background: url("https://unsplash.imgix.net/photo-1414924347000-9823c338079b?fit=crop&fm=jpg&h=700&q=75&w=1050") 33.33333% 0%;
-        -webkit-clip-path: polygon(0% 7%, 100% 9%, 95% 93%, 5% 95%);
-    }
-    25%,
-    45% {
-        background: url("https://unsplash.imgix.net/30/skater.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") 33.33333% 0%;
-        -webkit-clip-path: polygon(100% 3%, 95% 95%, 5% 90%, 0% 5%);
-    }
-    50%,
-    70% {
-        background: url("https://unsplash.imgix.net/photo-1415226581130-91cb7f52f078?fit=crop&fm=jpg&h=700&q=75&w=1050") 33.33333% 0%;
-        -webkit-clip-path: polygon(95% 83%, 5% 78%, 0% 6%, 100% 11%);
-    }
-    75%,
-    95% {
-        background: url("https://ununsplash.imgix.net/40/lUUnN7VGSoWZ3noefeH7_Baker%20Beach-12.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") 33.33333% 0%;
-        -webkit-clip-path: polygon(5% 79%, 0% 21%, 100% 16%, 95% 83%);
-    }
+.video-gallery .gallery-item:hover h2::after {
+    transform: translate3d(0, 0, 0);
 }
 
-@keyframes section-2 {
-    0%,
-    20%,
-    100% {
-        background: url("https://unsplash.imgix.net/photo-1414924347000-9823c338079b?fit=crop&fm=jpg&h=700&q=75&w=1050") 33.33333% 0%;
-        -webkit-clip-path: polygon(0% 7%, 100% 9%, 95% 93%, 5% 95%);
-    }
-    25%,
-    45% {
-        background: url("https://unsplash.imgix.net/30/skater.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") 33.33333% 0%;
-        -webkit-clip-path: polygon(100% 3%, 95% 95%, 5% 90%, 0% 5%);
-    }
-    50%,
-    70% {
-        background: url("https://unsplash.imgix.net/photo-1415226581130-91cb7f52f078?fit=crop&fm=jpg&h=700&q=75&w=1050") 33.33333% 0%;
-        -webkit-clip-path: polygon(95% 83%, 5% 78%, 0% 6%, 100% 11%);
-    }
-    75%,
-    95% {
-        background: url("https://ununsplash.imgix.net/40/lUUnN7VGSoWZ3noefeH7_Baker%20Beach-12.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") 33.33333% 0%;
-        -webkit-clip-path: polygon(5% 79%, 0% 21%, 100% 16%, 95% 83%);
-    }
+.video-gallery .gallery-item:hover p {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
 }
 
-section:nth-child(3) {
-    -moz-animation: section-3 8s both infinite;
-    -webkit-animation: section-3 8s both infinite;
-    animation: section-3 8s both infinite;
-}
 
-@-moz-keyframes section-3 {
-    0%,
-    20%,
-    100% {
-        background: url("https://unsplash.imgix.net/photo-1414924347000-9823c338079b?fit=crop&fm=jpg&h=700&q=75&w=1050") 66.66666% 0%;
-        -webkit-clip-path: polygon(5% 11%, 100% 14%, 95% 88%, 0% 91%);
+/*
+  @media screen and (max-width: 784px) {
+    .video-gallery {
+      width: 100%;
+      padding: 15px;    
+  
     }
-    25%,
-    45% {
-        background: url("https://unsplash.imgix.net/30/skater.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") 66.66666% 0%;
-        -webkit-clip-path: polygon(100% 14%, 95% 84%, 0% 91%, 5% 7%);
+    .video-gallery .gallery-item {
+      width: 95%;
+      margin: 0 auto; 
+      width: 100%;
     }
-    50%,
-    70% {
-        background: url("https://unsplash.imgix.net/photo-1415226581130-91cb7f52f078?fit=crop&fm=jpg&h=700&q=75&w=1050") 66.66666% 0%;
-        -webkit-clip-path: polygon(95% 79%, 0% 86%, 5% 7%, 100% 3%);
-    }
-    75%,
-    95% {
-        background: url("https://ununsplash.imgix.net/40/lUUnN7VGSoWZ3noefeH7_Baker%20Beach-12.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") 66.66666% 0%;
-        -webkit-clip-path: polygon(0% 85%, 5% 14%, 100% 3%, 95% 95%);
-    }
-}
-
-@-webkit-keyframes section-3 {
-    0%,
-    20%,
-    100% {
-        background: url("https://unsplash.imgix.net/photo-1414924347000-9823c338079b?fit=crop&fm=jpg&h=700&q=75&w=1050") 66.66666% 0%;
-        -webkit-clip-path: polygon(5% 11%, 100% 14%, 95% 88%, 0% 91%);
-    }
-    25%,
-    45% {
-        background: url("https://unsplash.imgix.net/30/skater.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") 66.66666% 0%;
-        -webkit-clip-path: polygon(100% 14%, 95% 84%, 0% 91%, 5% 7%);
-    }
-    50%,
-    70% {
-        background: url("https://unsplash.imgix.net/photo-1415226581130-91cb7f52f078?fit=crop&fm=jpg&h=700&q=75&w=1050") 66.66666% 0%;
-        -webkit-clip-path: polygon(95% 79%, 0% 86%, 5% 7%, 100% 3%);
-    }
-    75%,
-    95% {
-        background: url("https://ununsplash.imgix.net/40/lUUnN7VGSoWZ3noefeH7_Baker%20Beach-12.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") 66.66666% 0%;
-        -webkit-clip-path: polygon(0% 85%, 5% 14%, 100% 3%, 95% 95%);
-    }
-}
-
-@keyframes section-3 {
-    0%,
-    20%,
-    100% {
-        background: url("https://unsplash.imgix.net/photo-1414924347000-9823c338079b?fit=crop&fm=jpg&h=700&q=75&w=1050") 66.66666% 0%;
-        -webkit-clip-path: polygon(5% 11%, 100% 14%, 95% 88%, 0% 91%);
-    }
-    25%,
-    45% {
-        background: url("https://unsplash.imgix.net/30/skater.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") 66.66666% 0%;
-        -webkit-clip-path: polygon(100% 14%, 95% 84%, 0% 91%, 5% 7%);
-    }
-    50%,
-    70% {
-        background: url("https://unsplash.imgix.net/photo-1415226581130-91cb7f52f078?fit=crop&fm=jpg&h=700&q=75&w=1050") 66.66666% 0%;
-        -webkit-clip-path: polygon(95% 79%, 0% 86%, 5% 7%, 100% 3%);
-    }
-    75%,
-    95% {
-        background: url("https://ununsplash.imgix.net/40/lUUnN7VGSoWZ3noefeH7_Baker%20Beach-12.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") 66.66666% 0%;
-        -webkit-clip-path: polygon(0% 85%, 5% 14%, 100% 3%, 95% 95%);
-    }
-}
-
-section:nth-child(4) {
-    -moz-animation: section-4 8s both infinite;
-    -webkit-animation: section-4 8s both infinite;
-    animation: section-4 8s both infinite;
-}
-
-@-moz-keyframes section-4 {
-    0%,
-    20%,
-    100% {
-        background: url("https://unsplash.imgix.net/photo-1414924347000-9823c338079b?fit=crop&fm=jpg&h=700&q=75&w=1050") 99.99999% 0%;
-        -webkit-clip-path: polygon(5% 18%, 89% 21%, 62% 73%, 0% 83%);
-    }
-    25%,
-    45% {
-        background: url("https://unsplash.imgix.net/30/skater.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") 99.99999% 0%;
-        -webkit-clip-path: polygon(57% 31%, 45% 67%, 0% 77%, 5% 18%);
-    }
-    50%,
-    70% {
-        background: url("https://unsplash.imgix.net/photo-1415226581130-91cb7f52f078?fit=crop&fm=jpg&h=700&q=75&w=1050") 99.99999% 0%;
-        -webkit-clip-path: polygon(45% 57%, 0% 67%, 5% 8%, 72% 12%);
-    }
-    75%,
-    95% {
-        background: url("https://ununsplash.imgix.net/40/lUUnN7VGSoWZ3noefeH7_Baker%20Beach-12.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") 99.99999% 0%;
-        -webkit-clip-path: polygon(0% 77%, 5% 18%, 47% 21%, 32% 67%);
-    }
-}
-
-@-webkit-keyframes section-4 {
-    0%,
-    20%,
-    100% {
-        background: url("https://unsplash.imgix.net/photo-1414924347000-9823c338079b?fit=crop&fm=jpg&h=700&q=75&w=1050") 99.99999% 0%;
-        -webkit-clip-path: polygon(5% 18%, 89% 21%, 62% 73%, 0% 83%);
-    }
-    25%,
-    45% {
-        background: url("https://unsplash.imgix.net/30/skater.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") 99.99999% 0%;
-        -webkit-clip-path: polygon(57% 31%, 45% 67%, 0% 77%, 5% 18%);
-    }
-    50%,
-    70% {
-        background: url("https://unsplash.imgix.net/photo-1415226581130-91cb7f52f078?fit=crop&fm=jpg&h=700&q=75&w=1050") 99.99999% 0%;
-        -webkit-clip-path: polygon(45% 57%, 0% 67%, 5% 8%, 72% 12%);
-    }
-    75%,
-    95% {
-        background: url("https://ununsplash.imgix.net/40/lUUnN7VGSoWZ3noefeH7_Baker%20Beach-12.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") 99.99999% 0%;
-        -webkit-clip-path: polygon(0% 77%, 5% 18%, 47% 21%, 32% 67%);
-    }
-}
-
-@keyframes section-4 {
-    0%,
-    20%,
-    100% {
-        background: url("https://unsplash.imgix.net/photo-1414924347000-9823c338079b?fit=crop&fm=jpg&h=700&q=75&w=1050") 99.99999% 0%;
-        -webkit-clip-path: polygon(5% 18%, 89% 21%, 62% 73%, 0% 83%);
-    }
-    25%,
-    45% {
-        background: url("https://unsplash.imgix.net/30/skater.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") 99.99999% 0%;
-        -webkit-clip-path: polygon(57% 31%, 45% 67%, 0% 77%, 5% 18%);
-    }
-    50%,
-    70% {
-        background: url("https://unsplash.imgix.net/photo-1415226581130-91cb7f52f078?fit=crop&fm=jpg&h=700&q=75&w=1050") 99.99999% 0%;
-        -webkit-clip-path: polygon(45% 57%, 0% 67%, 5% 8%, 72% 12%);
-    }
-    75%,
-    95% {
-        background: url("https://ununsplash.imgix.net/40/lUUnN7VGSoWZ3noefeH7_Baker%20Beach-12.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") 99.99999% 0%;
-        -webkit-clip-path: polygon(0% 77%, 5% 18%, 47% 21%, 32% 67%);
-    }
-}
-
-@media (max-width: 1000px) {
-    #showcase {
-        position: absolute;
-        top: -115px;
-        left: -200px;
-        margin: 0;
-        -moz-transform: scale(0.65, 0.65);
-        -ms-transform: scale(0.65, 0.65);
-        -webkit-transform: scale(0.65, 0.65);
-        transform: scale(0.65, 0.65);
-    }
-}
+  }
+  */
