--- a/scss/styless.css
+++ b/scss/styless.css
@@ -1,69 +1,52 @@
 @-webkit-keyframes scroll {
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(-1750px);
-    }
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-1750px);
+  }
 }
-
 @keyframes scroll {
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(-1750px);
-    }
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-1750px);
+  }
 }
-
 .slider {
-    background: rgb(255, 251, 251);
-    height: 100px;
-    margin: auto;
-    overflow: hidden;
-    position: relative;
-    width: 960px;
+  background: rgb(44, 43, 43);
+  box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.125);
+  height: 100px;
+  margin: auto;
+  overflow: hidden;
+  position: relative;
+  width: 960px;
 }
-
-.slider::before,
+.slider::before, .slider::after {
+  background: linear-gradient(to right, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 100%);
+  content: "";
+  height: 100px;
+  position: absolute;
+  width: 200px;
+  z-index: 2;
+}
 .slider::after {
-    background: linear-gradient(to right, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 100%);
-    content: "";
-    height: 100px;
-    position: absolute;
-    width: 200px;
-    z-index: 2;
+  right: 0;
+  top: 0;
+  transform: rotateZ(180deg);
 }
-
-.slider::after {
-    right: 0;
-    top: 0;
-    transform: rotateZ(180deg);
-}
-
 .slider::before {
-    left: 0;
-    top: 0;
+  left: 0;
+  top: 0;
 }
-
 .slider .slide-track {
-    -webkit-animation: scroll 40s linear infinite;
-    animation: scroll 40s linear infinite;
-    display: flex;
-    width: 3500px;
+  -webkit-animation: scroll 40s linear infinite;
+          animation: scroll 40s linear infinite;
+  display: flex;
+  width: 3500px;
 }
-
 .slider .slide {
-    height: 100px;
-    width: 250px;
-}
-
-@media only screen and (max-width: 375px) {
-    .slider {
-        width: 100%;
-        height: 1000vh;
-    }
-}
-
-
-/*# sourceMappingURL=styless.css.map */
+  height: 100px;
+  width: 250px;
+}/*# sourceMappingURL=styless.css.map */
