--- a/form/form.css
+++ b/form/form.css
@@ -559,3 +559,29 @@ footer {
         flex-direction: column;
     }
 }
+
+@media screen and (max-width: 768px) {
+    body,
+    html {
+        overflow-x: hidden;
+    }
+    .hotel-reservation-form {
+        background-color: #fff;
+        width: 500px;
+        margin: 0 auto;
+        box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, .2);
+    }
+}
+
+@media screen and (max-width: 425px) {
+    body,
+    html {
+        overflow-x: hidden;
+    }
+    .hotel-reservation-form {
+        background-color: #fff;
+        width: 200px;
+        margin: 0 auto;
+        box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, .2);
+    }
+}
